--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "blob-polyfill": "^1.0.20150320",
     "firebase": "^3.1.0",
     "react": "15.2.1",
     "react-native": "0.29.0",
+    "react-native-image-picker": "^0.20.1",
     "react-native-navbar": "^1.5.0"
   }
 }
