update to actually working

--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
-  "name": "FBReactProject",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
-  },
-  "dependencies": {
-    "blob-polyfill": "^1.0.20150320",
-    "firebase": "^3.1.0",
-    "react": "15.2.1",
-    "react-native": "0.29.0",
-    "react-native-image-picker": "^0.20.1",
-    "react-native-navbar": "^1.5.0"
-  }
+	"name": "RNFirebaseUploadApp",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"start": "node node_modules/react-native/local-cli/cli.js start",
+		"test": "jest"
+	},
+	"dependencies": {
+		"firebase": "^3.6.10",
+		"react": "15.4.2",
+		"react-native": "0.41.2",
+		"react-native-fetch-blob": "^0.10.2",
+		"react-native-image-picker": "^0.25.7"
+	},
+	"devDependencies": {
+		"babel-jest": "19.0.0",
+		"babel-preset-react-native": "1.9.1",
+		"jest": "19.0.2",
+		"react-test-renderer": "15.4.2"
+	},
+	"jest": {
+		"preset": "react-native"
+	}
 }
