--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,7 @@
-rootProject.name = 'FBReactProject'
+rootProject.name = 'RNFirebaseUploadApp'
+include ':react-native-image-picker'
+project(':react-native-image-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-picker/android')
+include ':react-native-fetch-blob'
+project(':react-native-fetch-blob').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fetch-blob/android')
 
 include ':app'
