--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,15 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    {
+        "name": "Debug Android",
+        "program": "${workspaceRoot}/.vscode/launchReactNative.js",
+        "type": "reactnative",
+        "request": "launch",
+        "platform": "android",
+        "sourceMaps": true,
+        "outDir": "${workspaceRoot}/.vscode/.react"
+    },
         {
             "name": "Debug iOS",
             "program": "${workspaceRoot}/.vscode/launchReactNative.js",
